--- a/src/source/message.properties
+++ b/src/source/message.properties
@@ -2,3 +2,10 @@ sizeForm.id=Input size id
 profit.produced=Produced
 profit.ordered=Ordered
 profit.date=Date
+button.orders=Orders
+button.clients=Clients
+button.equipments=Equipments
+button.factories=Factories
+button.personnel=Personnel
+button.products=Products
+button.profit=Profit
