created main functionality

--- a/src/source/message.properties
+++ b/src/source/message.properties
@@ -9,3 +9,17 @@ button.factories=Factories
 button.personnel=Personnel
 button.products=Products
 button.profit=Profit
+button.add=Add
+label.firstname=FirstName
+label.lastname=LastName
+label.middlename=MiddleName
+label.telephone=Telephone
+label.name=Name
+label.factory=Factory
+label.city=City
+label.client=Client
+label.date=Date
+label.address=Address
+label.cost=Cost
+label.size=Size
+label.choose.factory=Choose factory
